--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apexcharts": "^3.37.0",
     "bootstrap": "^5.2.3",
+    "composer": "^4.1.0",
     "jquery": "^3.6.3"
   }
 }
