--- a/composer.json
+++ b/composer.json
@@ -2,4 +2,11 @@
     "require": {
     "php": "^7.4",
     "laravel/framework": "^8.0"
-}}
+},
+
+"config": {
+    
+    "document-root": "AVOCASH1.0"
+  }
+
+}
